--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: G-C00MV306B0 # fill in your Google Analytics ID
+    id: G-JMX9X0FDQK # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
